--- a/compile-kernel/tools/config/config-6.6
+++ b/compile-kernel/tools/config/config-6.6
@@ -2017,7 +2017,7 @@ CONFIG_PCIE_ROCKCHIP_DW_HOST=y
 #
 # Generic Driver Options
 #
-# CONFIG_UEVENT_HELPER is not set
+CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_DEVTMPFS_SAFE is not set
