--- a/compile-kernel/tools/config/config-6.1
+++ b/compile-kernel/tools/config/config-6.1
@@ -1971,7 +1971,7 @@ CONFIG_PCI_MESON=y
 #
 # Generic Driver Options
 #
-# CONFIG_UEVENT_HELPER is not set
+CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_DEVTMPFS_SAFE is not set
